--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset=utf-8>
         <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
-        <title>Shader Nodes</title>
+        <title>Frag3d.js</title>
     </head>
     <body>
         <canvas id="renderer" width="720" height="480"></canvas>
