--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <canvas id="renderer" width="720" height="480"></canvas>
+        <div>_</div>
         <script id="gpgpu-vs" type="x-shader/x-vertex">
             attribute vec3  a_Position;
             attribute vec2  a_texCoord;
