--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset=utf-8>
         <link rel="stylesheet" type="text/css" href="static/css/main.css"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
         <title>Frag3d.js</title>
     </head>
     <body>
