--- a/index.html
+++ b/index.html
@@ -152,11 +152,13 @@
             uniform mat4 u_normalMatrix;
 
             varying vec3 v_normal;
+            varying vec2 v_uv;
 
 
 
 
             void main () {
+                v_uv = TEXCOORD_0;
                 v_normal = vec3(u_normalMatrix * vec4(NORMAL, 1));
                 gl_Position = u_P * u_V * u_M * vec4(POSITION, 1);
             }
@@ -169,12 +171,14 @@
             uniform sampler2D metallicRoughnessTexture;
 
             varying vec3 v_normal;
+            varying vec2 v_uv;
 
             void main () {
+                vec4 color = texture2D(baseColorTexture, v_uv);
                 vec3 N = normalize(v_normal);
-                vec3 L = normalize(vec3(10, 5, 0));
-                vec3 diffuse = vec3(1) * max(dot(N, L), 0.0);
-                gl_FragColor = vec4(diffuse, 1);
+                vec3 L = normalize(vec3(10, -5, 0));
+                vec3 diffuse = vec3(1) * max(dot(N, L), 0.0) + vec3(0.5);
+                gl_FragColor = vec4(diffuse, 1) * color;
             }
         </script>
 
