--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
                 vec3 N = normalize(v_normal);
                 vec3 L = normalize(vec3(10, -5, 0));
                 vec3 diffuse = vec3(1) * max(dot(N, L), 0.0) + vec3(0.5);
-                gl_FragColor = vec4(diffuse, 1) * color;
+                gl_FragColor = vec4(1,1,1, 1) * color;
+                gl_FragColor = vec4(diffuse, 1);
             }
         </script>
 
